# cflp

./: .gitattributes  .gitignore  0.start.html  1.non-macro-lib.html  1.simple.html  2.calls.html  2.derive.html  3.node-data.html  3.saves.html  4.benchmarks.html  4.or.html  404.html  5.no_type_macro.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  index.html  print.html  searchindex.js  searchindex.json
.github/workflows/: deploy.yml
bench/Complex/attribute/base/: tukey.json
bench/Complex/derived/new/: estimates.json  tukey.json
bench/Complex/derived/report/: index.html
bench/Complex/hand written/new/: sample.json
bench/Complex/hand written/report/: index.html
bench/Complex/handwritten/change/: estimates.json
bench/Complex/handwritten/new/: estimates.json  tukey.json
bench/Complex/report/: index.html
bench/Simple/report/: index.html
bench/report/: index.html
benches/: main.rs
benches/complex/: attr.rs  custom.rs  mod.rs  prelude.rs  rule.rs  rule_no_types.rs
benches/simple/: attr.rs  custom.rs  mod.rs  prelude.rs  rule.rs  rule_no_types.rs
book/: book.toml
book/src/: 0.start.md  1.non-macro-lib.md  1.simple.md  2.calls.md  2.derive.md  3.node-data.md  3.saves.md  4.benchmarks.md  4.or.md  5.no_type_macro.md  README.md  SUMMARY.md
cflp_macros/: Cargo.toml  README.md
cflp_macros/src/: lib.rs  lifetimes.rs  parser.rs  prelude.rs  saving.rs
cflp_macros/src/prelude/: impls.rs  mod.rs  mod_old.rs  no_types.rs  parser.rs
examples/: example1.rs  example2.rs  example3.rs  example4.rs  test.rs
src/: lib.rs  lib_new.rs  lib_old.rs
(+28 files in other folders)
