[package]
name = "cflp_macros"
version = "0.1.0"
edition = "2021"
authors = ["nxe <rosiegbartlett@gmail.com>"]
repository = "https://github.com/fck-language/cflp/tree/master/cflp_macros"
readme = "README.md"
license = "GPL-3.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
